@@ -1,6 +1,7 @@
 package com.mjc.stage2;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ShopStock {
     private final List<Product> productList;
@@ -10,6 +11,6 @@ public class ShopStock {
     }
 
     public List<Product> listExecuteFilteringStrategy(FilteringStrategy filteringStrategy) {
-        return productList.stream().filter(filteringStrategy::filter).toList();
+        return productList.stream().filter(filteringStrategy::filter).collect(Collectors.toList());
     }
 }
